<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingTop="55dp"
    android:orientation="vertical"
    tools:context=".Operator.AttendanceActivity_Operator">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attendance_form"
        android:textSize="40sp"
        android:textColor="#DA8443CF"
        android:fontFamily="cursive"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:background="@drawable/ic_attendance" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:text="@string/click_present_button_below_for_fill_your_today_s_attendance"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_absent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E13B3B"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/absent" />

        <Button
            android:id="@+id/btn_present"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#319FD3"
            android:gravity="center"
            android:text="@string/present" />
    </LinearLayout>

</LinearLayout>